Popup alignment issue fixed for add to bag button

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/_common.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/_common.scss
@@ -553,3 +553,10 @@ footer{
 video::-webkit-media-controls {
   display:none !important;
 }
+
+/*btn*/
+
+.btn-gloden {
+    background: $gold-dark;
+    color: $white;
+}
